# tinyrpc

./: CMakeLists.txt  README.md  autobuild.sh
example/: friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
lib/include/: lockqueue.h  mprpcchannel.h  zookeeperutil.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  mprpcprovider.cc  rpcprovider.cc  zookeeperutil.cc
src/include/: logger.h  mprpcapplication.h  mprpcconfig.h  mprpccontroller.h  mprpcprovider.h  rpcheader.pb.h  rpcprovider.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
